<resources>
    <string name="app_name">Consulting</string>

    <string name="sign_up">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="click_here">Click here</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="resend_verification_link">Resend Verification link</string>
    <string name="log_out">Log Out</string>
    <string name="account_setting">Account Setting</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="this_week_s_initiatives">This week\'s initiatives</string>
    <string name="employee_schedule">Employee Schedule</string>
    <string name="company_culture">Company Culture</string>
    <string name="tabian_consulting_sales_chart">Tabian Consulting Sales Chart</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account Settings</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="primary_phone_contact">Primary phone contact #</string>
    <string name="chat">Chat</string>


    <!-- Intent Extras -->
    <string name="intent_chatroom">intent_chatroom</string>


    <!-- Dialog Names -->
    <string name="dialog_change_photo">ChangePhotoDialog</string>
    <string name="dialog_new_chatroom">NewChatroomDialog</string>



    <!-- Firebase Database Nodes -->
    <string name="dbnode_users">users</string>
    <string name="dbnode_chatrooms">chatrooms</string>


    <!-- Firebase Database Fields -->
    <string name="field_chatroom_name">chatroom_name</string>
    <string name="field_creator_id">creator_id</string>
    <string name="field_security_level">security_level</string>
    <string name="field_email">email</string>
    <string name="field_name">name</string>
    <string name="field_phone">phone</string>
    <string name="field_profile_image">profile_image</string>
    <string name="field_user_id">user_id</string>
    <string name="field_chatroom_id">chatroom_id</string>
    <string name="field_chatroom_messages">chatroom_messages</string>
    <string name="field_message">message</string>
    <string name="field_timestamp">timestamp</string>
    <string name="employee_dashboard">Employee Dashboard</string>
    <string name="this_weeks_initiative">This weeks initiative</string>
    <string name="sign_in">Sign In</string>
    <string name="choose_photo_from_memory">Choose photo from memory</string>
    <string name="take_a_photo">Take a Photo</string>

    <!-- Strings -->
    <string name="alert_dialog_delete">DELETE</string>
    <string name="alert_dialog_cancel">Cancel</string>
</resources>